--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
+    <h1>Hello</h1>
     <div class="main">
       <div class="top">
         <div class="head gradient-text"><h1>StopWatch</h1></div>
